--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Ozono Warden</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="shortcut icon" href="img/logoOzonoWarden.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logoO3.png" type="image/x-icon">
 </head>
 
 <body>
